红包分会场

--- a/styles/entrance.css
+++ b/styles/entrance.css
@@ -220,6 +220,12 @@ a:active {
   z-index: -1;
   overflow: hidden;
 }
+.middle .f1 {
+  display: block;
+}
+.middle .f2 {
+  display: none;
+}
 .middle .middle-redpack-button {
   margin-top: 93px;
   color: #000;
@@ -253,6 +259,11 @@ a:active {
   font-size: 13px;
   line-height: 21px;
   margin-top: 10px;
+}
+@media (max-width: 1024px) {
+  .mask5 #success {
+    top: 76%;
+  }
 }
 @media (max-width: 768px) {
   .middle {
@@ -305,6 +316,9 @@ a:active {
   .qnws {
     top: 155px!important;
   }
+  .mask5 #success {
+    top: 76%;
+  }
 }
 @media (max-width: 640px) {
   .middle .middle-redpack-container {
@@ -342,6 +356,10 @@ a:active {
   }
   .qnws {
     top: 150px!important;
+  }
+  .mask5 #success {
+    top: 76%;
+    left: -11px;
   }
 }
 @media (max-width: 512px) {
@@ -395,6 +413,10 @@ a:active {
   .qnws {
     top: 110px!important;
   }
+  .mask5 #success {
+    top: 60.5%;
+    left: 5px;
+  }
 }
 @media (max-width: 414px) {
   .middle {
@@ -422,7 +444,7 @@ a:active {
   }
   .middle .middle-redpack-title .middle-redpack-title-gsname {
     position: relative;
-    top: -35px;
+    top: -25px;
   }
   .middle .middle-redpack-button {
     margin-top: 25px;
@@ -457,6 +479,13 @@ a:active {
   .qnws {
     top: 70px!important;
   }
+  .big-wx {
+    margin-top: 16px;
+  }
+  .mask5 #success {
+    top: 76%;
+    left: -2px;
+  }
 }
 @media (max-width: 412px) {
   .middle {
@@ -464,10 +493,10 @@ a:active {
   }
   .middle .fourty-four {
     position: absolute;
-    top: 469px;
+    top: 479px;
   }
   .middle .middle-redpack-container {
-    top: -13x;
+    top: 13px;
   }
   .middle .middle-redpack-img {
     height: 487px;
@@ -484,6 +513,10 @@ a:active {
   }
   .qnws {
     top: 70px!important;
+  }
+  .mask5 #success {
+    top: 76%;
+    left: 0;
   }
 }
 @media (max-width: 375px) {
@@ -512,7 +545,7 @@ a:active {
   }
   .middle .middle-redpack-title .middle-redpack-title-gsname {
     position: relative;
-    top: -20px;
+    top: -10px;
   }
   .middle .middle-redpack-button {
     margin-top: 12px;
@@ -534,6 +567,13 @@ a:active {
   }
   .qnws {
     top: 45px!important;
+  }
+  .big-wx {
+    margin-top: 17px;
+  }
+  .mask5 #success {
+    top: 76%;
+    left: 0;
   }
 }
 @media (max-width: 360px) {
@@ -588,6 +628,10 @@ a:active {
   }
   .bottom .bottom-kid {
     top: 77px!important;
+  }
+  .mask5 #success {
+    top: 76%;
+    left: 1px;
   }
 }
 @media (max-width: 320px) {
@@ -664,6 +708,10 @@ a:active {
   .qnws {
     top: 40px!important;
   }
+  .mask5 #success {
+    top: 76.2%;
+    left: 0;
+  }
 }
 /****** Index Middle End ******/
 /****** Index Bottom End ******/
@@ -716,7 +764,7 @@ a:active {
   margin-top: 18px;
   margin-right: -1px;
 }
-.bottom .bottom-kid ul .col-xs-4 .big textarea {
+.bottom .bottom-kid ul .col-xs-4 .big .big-kai {
   height: 63px;
   width: 65px;
   text-align: center;
@@ -753,6 +801,15 @@ a:active {
 }
 .bottom .bottom-kid .yellow:active {
   background: #e49c01!important;
+}
+.big-wx {
+  height: 63px;
+  width: 65px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 20px;
+  resize: none;
+  overflow: hidden;
 }
 .qnws {
   color: #fff;
@@ -922,7 +979,7 @@ a:active {
 .mask3 .mask-body {
   position: fixed;
   z-index: 5000;
-  width: 50%;
+  width: 55%;
   max-width: 300px;
   top: 50%;
   left: 50%;
@@ -934,7 +991,7 @@ a:active {
   overflow: hidden;
 }
 .mask3 .mask-body .mask-content {
-  padding: 20px;
+  padding: 50px;
 }
 .mask3 .mask-body .know {
   border-top: 1px solid #eee;
@@ -950,7 +1007,7 @@ a:active {
   right: 0;
   left: 0;
   bottom: 0;
-  display: none;
+  display: block;
 }
 .mask4 .mask-body {
   position: fixed;
@@ -974,3 +1031,42 @@ a:active {
   font-size: 16px;
 }
 /****** 记载中 End ******/
+.mask5 {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: none;
+  background: rgba(0, 0, 0, 0.7);
+}
+.mask5 #success {
+  color: #5cb85c;
+  width: 270.5px;
+  height: 24px;
+  line-height: 24px;
+  position: absolute;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 2px;
+  z-index: 4;
+  background: #fff;
+  display: none;
+  opacity: 0.9;
+}
+.mask5 #success2 {
+  color: #ffffff;
+  height: 24px;
+  line-height: 24px;
+  position: absolute;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 2px;
+  z-index: 4;
+  left: 0;
+  top: -15%;
+  font-size: 23px;
+}
