--- a/styles/entrance.less
+++ b/styles/entrance.less
@@ -60,8 +60,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.top-block2-kid             {   opacity: 0.7; font-size: 13px;}
 	.bottom-block               {   margin-top:70px;  }
 	.four                       {   width:@100;  position:@pos-a;  z-index: -1;  overflow: hidden;  }
-	.f1    {   display: block}
-	.f2    {   display: none}
+
 	.middle-redpack-button      {   margin-top:93px;color: #000;background: #b4b4b4; width: 90px; height: 90px;line-height: 90px;border-radius: 50px;
 		font-size:20px;
 		text-align: center;
@@ -81,11 +80,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.subHeading                 {   opacity: 0.7;font-size: 13px;line-height: 21px;    margin-top: 10px; }
 }
 
-@media (max-width: 1024px) {
-	.mask5                 {
-		#success     {       top:76%;  }
-	}
-}
 
 @media ( max-width: 768px )
 {
@@ -111,11 +105,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.bottom .bottom-kid  {       top: 151px!important;  }
 	.fourteen            {       margin-top: 269px!important;     }
 	.qnws                {       top: 155px!important; }
-	.mask5                 {
-		#success     {        top:76%;  }
-	}
-
-
 }
 @media ( max-width: 640px )
 {
@@ -133,11 +122,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.bottom .bottom-kid  {       top: 151px!important;  }
 	.fourteen            {       margin-top: 270px!important;     }
 	.qnws                {       top: 150px!important; }
-	.mask5                 {
-		#success     {     top: 76%;
-			left: -11px;  }
-	}
-
 }
 @media ( max-width: 512px )
 {
@@ -160,10 +144,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.bottom .bottom-kid  {  top: 118px!important;  }
 	.fourteen            {       margin-top: 216px!important;     }
 	.qnws                {       top: 110px!important; }
-	.mask5                 {
-		#success     {     top: 60.5%;
-			left: 5px;  }
-	}
 }
 @media ( max-width: 414px )
 {
@@ -177,7 +157,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-container   {   top: 12px; }
 		.middle-redpack-img         {   height: 489px; }
 		.middle-redpack-title       {   padding-top: 101px;
-			.middle-redpack-title-gsname    {  position: relative;  top: -25px; }
+			.middle-redpack-title-gsname    {  position: relative;  top: -35px; }
 		}
 		.middle-redpack-button      {   margin-top:25px; }
 		.middle-redpack-button2     {   margin-top: 50px; }
@@ -191,10 +171,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.bottom .bottom-kid  {  top: 99px!important;  }
 	.fourteen            {       margin-top: 172px!important;     }
 	.qnws                {       top: 70px!important; }
-	.big-wx                 {  margin-top: 16px; }
-	.mask5                 {
-		#success     {      top: 76%;    left: -2px;  }
-	}
 }
 
 @media (max-width: 412px) {
@@ -202,10 +178,10 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		background-position-y: 10px;
 		.fourty-four {
 			position: absolute;
-			top: 479px;
+			top: 469px;
 		}
 		.middle-redpack-container {
-			top: 13px;
+			top: -13x;
 		}
 		.middle-redpack-img         {   height: 487px; }
 		.middle-redpack-log          {   height: 44px;
@@ -215,9 +191,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	}
 	.fourteen            {       margin-top: 173px!important;     }
 	.qnws                {       top: 70px!important; }
-	.mask5                 {
-		#success     {     top: 76%;  left:0;  }
-	}
 }
 
 @media ( max-width: 375px )
@@ -231,7 +204,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-container   {   top: 12px;  }
 		.middle-redpack-img         {   height: 439px; }
 		.middle-redpack-title       {   padding-top: 83px;
-			.middle-redpack-title-gsname    {  position: relative;  top: -10px; }
+			.middle-redpack-title-gsname    {  position: relative;  top: -20px; }
 		}
 		.middle-redpack-button      {   margin-top:12px; }
 		.middle-redpack-subtitle    {   margin-top:37px;  }
@@ -241,11 +214,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	}
 	.fourteen            {       margin-top: 157px!important;     }
 	.qnws                {       top: 45px!important; }
-	.big-wx                 {  margin-top: 17px; }
-	.mask5                 {
-		#success     {      top: 76%;
-			left:0;  }
-	}
 }
 @media ( max-width: 360px )
 {
@@ -269,9 +237,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	}
 	.fourteen            {       margin-top: 152px!important;     }
 	.bottom .bottom-kid  {  top: 77px!important;  }
-	.mask5                 {
-		#success     {          top: 76%;left:1px;  }
-	}
 }
 @media ( max-width: 320px )
 {
@@ -302,11 +267,6 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.fourteen            {       margin-top: 135px!important;     }
 	.qnws                {       top: 40px!important;  }
 
-	.mask5                 {
-		#success     {  top: 76.2%;
-			left:0; }
-	}
-
 }
 /****** Index Middle End ******/
 
@@ -322,8 +282,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 			.col-xs-4               {  padding: 0; z-index: -1;  overflow: hidden;
 				.big                    {  width: 80px;  height: 80px;  background: #f5263e;  border-radius: 50px;  line-height: 75px;  font-size: 15px;  .center;  .bordered;
 					span                     { display: inline-block;line-height: 21px; width: 49px; margin-top: 18px; margin-right: -1px;          }
-					.big-kai                 {  height: 63px;  width: 65px;  text-align: center;  line-height: 20px;  resize: none;  overflow: hidden; margin-top: 21px;}
-
+					textarea                 {  height: 63px;  width: 65px;  text-align: center;  line-height: 20px;  resize: none;  overflow: hidden;  margin-top: 21px;  }
 				}
 				.small                {  position:@pos-r;  width: 25px;  background: #f5263e;  height: 25px;  border-radius: 50px;  line-height: 25px;  top: -22px;  left: -30px;  .center;  .bordered;
 				}
@@ -338,7 +297,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		}
 	}
 }
-.big-wx                 {  height: 63px;  width: 65px; font-size: 12px; text-align: center;  line-height: 20px;  resize: none;  overflow: hidden;}
+
 .qnws                 {  color: #fff; text-align: center;  position: relative;  top: 186px;  z-index: 1;font-size: 13px;
 	p                   {    color: #f7e9e9;letter-spacing: 2px;margin:10px;  }
 }
@@ -384,8 +343,8 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 
 /****** 弹框提示 Start ******/
 .mask3                  {  position: @pos-f;  max-width: 640px;  margin: 0 auto;  z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;  background: rgba(0, 0, 0, 0.7);  display: none;
-	.mask-body              {  position: @pos-f;  z-index: 5000;  width: 55%;  max-width: 300px;  top: 50%;  left: 50%;  -webkit-transform: translate(-50%, -50%);  transform: translate(-50%, -50%);  background-color: #FFFFFF;  text-align: center;  border-radius: 3px;  overflow: hidden;
-		.mask-content           {  padding: 50px;  }
+	.mask-body              {  position: @pos-f;  z-index: 5000;  width: 50%;  max-width: 300px;  top: 50%;  left: 50%;  -webkit-transform: translate(-50%, -50%);  transform: translate(-50%, -50%);  background-color: #FFFFFF;  text-align: center;  border-radius: 3px;  overflow: hidden;
+		.mask-content           {  padding: 20px;  }
 		.know                   {  border-top: 1px solid #eee;  padding: 5px;  color: #0BB20C;  }
 	}
 }
@@ -396,7 +355,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 
 
 /****** 记载中 Start ******/
-.mask4                  {  position: @pos-f;  z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;  display: block;
+.mask4                  {  position: @pos-f;  z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;  display: none;
 	.mask-body              {  position: @pos-f;  z-index: 5000;  width: 8.6em;  min-height: 8.6em;  top: 180px;  left: 0;  right: 0;  margin: 0 auto;  background: rgba(17, 17, 17, 0.7);  text-align: center;  border-radius: 5px;  color: #FFFFFF;
 		img                     {  width: 30%;  margin: 20px auto!important;  }
 		p                       {  font-size: 16px;  }
@@ -404,9 +363,3 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 }
 /****** 记载中 End ******/
 
-
-.mask5                 {  position: @pos-f;  z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;  display: none;background: rgba(0, 0, 0, 0.7);
-			#success     {     color: rgb(92, 184, 92);  width: 270.5px;  height: 24px; line-height: 24px; position: absolute;   right: 0;  margin: 0 auto;  text-align: center;border-radius: 2px;z-index: 4;background: #fff;display: none;
-				opacity:0.9;}
-	#success2     {    color: #ffffff;  height: 24px;  line-height: 24px;  position: absolute;  right: 0;  margin: 0 auto;  text-align: center;  border-radius: 2px;  z-index: 4;  left: 0;  top: -15%;  font-size: 23px;}
-}
