--- a/styles/verify.css
+++ b/styles/verify.css
@@ -1,23 +1,21 @@
 
 
 
+
 /*滑动验证码*/
-#mpanel4    {
-	top: 40%;
-	left: 37%;
+#mpanel{
+	position: absolute;
 }
 
 .verify-bar-area {
     position: relative;
-    background: #e4e4e4;
+    background: #FFFFFF;
    	text-align: center;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+   	border: 1px solid #ddd;
    	-webkit-border-radius: 4px;
-	height: 30px;
-	border-radius: 15px;
-	top:10px;
 }
  
 .verify-bar-area .verify-move-block {
@@ -31,24 +29,23 @@
     box-sizing: content-box;
     box-shadow: 0 0 2px #888888;
     -webkit-border-radius: 1px;
-	width: 52px;
-	border-radius: 12px;
-	height: 32px;
 }
 
-/*.verify-bar-area .verify-move-block:hover {*/
-    /*background-color: #337ab7;*/
-    /*color: #FFFFFF;*/
-/*}*/
+.verify-bar-area .verify-move-block:hover {
+    background-color: #337ab7;
+    color: #FFFFFF;
+}
 
 .verify-bar-area .verify-left-bar {
     position: absolute;
     top: -1px;
     left: -1px;
+   	background: #f0fff0;
     cursor: pointer;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+    border: 1px solid #ddd;
 }
 
 .verify-img-panel {
@@ -93,17 +90,11 @@
 }
 
 .verify-bar-area .verify-move-block .verify-icon {
-	font-size: 22px;
-	position: relative;
-	top:1px;
+	font-size: 18px;
 }
 
 .verify-bar-area .verify-msg {
 	z-index : 3;
-	font-size: 12px;
-	position: relative;
-	left: 15px;
-	line-height: 30px;
 }
 
 /*字体图标的css*/
@@ -130,63 +121,3 @@
 .icon-right:before { content: "\e6a3"; }
 
 .icon-refresh:before { content: "\e6a4"; }
-
-@media (max-width:768px) {
-	#mpanel4{
-		left: 32%;
-		top: 40%;
-	}
-}
-
-@media (max-width: 640px) {
-	#mpanel4{
-		left: 28%;
-		top: 40%;
-	}
-}
-
-@media (max-width: 512px) {
-	#mpanel4{
-		left: 24%;
-		top: 40%;
-	}
-}
-
-@media (max-width: 414px) {
-	#mpanel4{
-		left: 17%;
-		top: 30%;
-	}
-}
-
-@media (max-width: 412px) {
-	#mpanel4{
-		left: 17%;
-		top: 30%;
-	}
-}
-
-@media (max-width: 375px) {
-
-	#mpanel4{
-		left: 13.8%;
-		top: 33%;
-	}
-
-}
-
-@media (max-width: 360px) {
-
-	#mpanel4{
-		left: 12.5%;
-		top: 32%;
-	}
-
-}
-
-@media (max-width: 320px) {
-	#mpanel4{
-		left: 7.5%;
-		top: 29%;
-	}
-}
